jenkins-deployment (1).yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins-test
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins-master
    spec:
      containers:
        - name: jenkins-leader
          image: jenkins/jenkins:latest
          ports:
            - containerPort: 8080
            - containerPort: 50000
