jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-test
spec:
  replicas: 1
  selector:
    matchLabels:
        app: jenkins-master
  template:
    metadata:
      labels:
        app: jenkins-master
    spec:
      containers:
        - name: jenkins-leader
          image: jenkins/jenkins:latest
          ports:
            - containerPort: 8080
            - containerPort: 50000
