jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-test
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: ui
    - port: 50000
      targetPort: 50000
      name: api

  selector:
    app: jenkins-master
